# FAERS-DAEN-Discordance-Filter

./: .gitignore  .zenodo.json  LICENSE  README.md  data_dictionary.md  pyproject.toml  requirements.txt  run_cells.py  run_local_fill.sh  sim_config.yaml
data/raw/: README.md
data/reference/: alert_registry.csv  atc4_resolved.json  mass_tort_drugs.csv  omop_euadr_ingredient_map.json  omop_outcome_to_meddra_pt_map.csv
outputs/figures/: figure_1_arm1_flow.mmd
outputs/tables/: counterfactual_analysis.md  counterfactual_h1.json  density_summary.md  phase1_summary.md  phase2_summary.md  phase4_h4_family4.md  phase4_results.json  phase4_results.md  phase5_results.json  phase5_results.md  phase6_granularity_substitute.json  phase6_granularity_substitute.md  phase6_h2_sensitivity.md  phase6_h5c_detrended.md  phase6_ic025_sensitivity.json  phase6_ic025_sensitivity.md  phase6_ref_set_breakout.md  s4_wcr_verdict.json  s_hypotheses.json  sim_analysis_summary.md  wcr_coverage_summary.md
scripts/: 01_build_arm1.py  02_power_augment.py  03_phase4_confirmatory.py  04_build_arm2.py  05_phase5_mechanism.py  06_h2_sensitivity.py  07_ic025_sensitivity.py  08_granularity_substitute.py  09_h5c_detrended.py  10_make_figures.py  sim_analysis.py  sim_density_sweep.py  sim_make_figures.py  sim_wcr_coverage.py
src/enrichment/: __init__.py  family1.py  family2.py
src/mechanism/: __init__.py  family3_tests.py  h5_features.py
src/metrics/: __init__.py  contingency.py  ebgm_mgps.py  ic_bcpnn.py  prr.py  ror.py
src/power/: __init__.py  exact.py  fast.py  mde.py  montecarlo.py  signal.py  wald.py
src/replication/: build_arm1.py  build_arm2.py
src/reporting/: sim_analysis.py
src/simulation/: __init__.py  dgp.py  (+4 more)
tests/: test_contingency.py  test_ebgm.py  test_ic.py  test_power_fast.py  test_power_validation.py  test_ror_prr.py  test_simulation_gsim.py
