[project]
name = "faers-daen-discordance"
version = "1.0.0"
description = "Cross-database discordance as a drug-safety artefact filter: a pre-registered FAERS-DAEN test. Pre-registration: https://doi.org/10.17605/OSF.IO/ZQ97A"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hayden Farquhar" }]
dependencies = [
    "numpy>=2.0",
    "pandas==2.2.*",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pyarrow>=16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
